# db_assistant

./: .env.example  .gitignore  Jarvis.py  commands.yaml  config.py  main.py  pyproject.toml  test.py
data/: commands.yaml  config.py  home_assistant_entities.yaml  weather_city.json
modules/: HomeAssistant.py  Jarvis.py  MediaPlayerController.py  Weather.py
utils/: download_models.py  execute_cmd.py  play.py  tts.py  validate_ollama.py
